@startuml CLD_OTOS
title Class Diagram for **OTOS**\n

hide empty members

class Thread {
    'Properties:
    + Stack_pointer
    - Stacksize
    - Stack_top
    - state
    - priority
    - schedule_ticks
    - counter_ticks

    'Methods:
    + Thread()
    + set_stack()
    + get_stacksize()
    + get_stackoverflow()
    + get_priority()
    + set_schedule()
    + set_running()
    + set_blocked()
    + count_tick()
    + is_runnable()
}
class Kernel{
    'Properties:
    - thread_count
    - Thread[NUMBER_THREADS]
    - Stack[StackSize]
    - last_thread[Number of Priorities]
    - //static// Time_ms

    'Methods:
    + Kernel()
    + schedule_thread()
    + start()
    + get_allocated_stacksize()
    + //static// count_time_ms()
    + //static// get_time_ms()
    + update_schedule()
    + get_next_thread()
    + switch_to_thread()
    - find_next_thread()
}

class Watchdog {
   '+ Watchdog()
   '+ Pet()
}

class Task{
    ' Properties:
    - LastTicks

    ' Methods:
    + Task()
    ' + //static// Lock()
    ' + //static// Unlock()
    ' + //static// WaitFor()
    + //static// Yield()
    ' + Sleep()
    ' - GetSysTick()
}

class IPC{
   '- Id
   '- CmdBuffer
   '+ GetQueue()
   '+ PushQueue()
}

Thread "*"-*"1" Kernel
Kernel --|> Watchdog
Task --|> IPC

@enduml